working Scanner, examples directory and build config fix